JG-2002-08-08-0  Enhancem.  Added RFE document for a mirroring module based
                            on the event client interface.

EB-2002-08-08-0  I18N:      Messages in some types of mail notification are
                            not i18ned.
                 Bugtraq:   #4728217
                 Changed:   sge_execd, sge_qmaster

EB-2002-08-07-0  Bugfix:    maxujobs prevents dispatching even if job limit is
                            not reached
                 Issue:     #345
                 Bugtraq:   #4727515
                 Changed:   sge_schedd

CR-2002-08-02-0: Testsuite: delete_job: when wait_for_end is specified, delete
                            job a second time

CR-2002-08-01-0: Testsuite: - Several changes for maintrunc compatibility
                            - better setup error behaviour
                 Bugfix:    ckpt_migration_test fails due to reference checks
                 Issue:     #340

JG-2002-08-01-0: Bugfix:    Systems with security framework enabled did not 
                            work with cull version checking (JG-2002-07-17-0).

CR-2002-07-31-1: Bugfix:    English messages show up when running install 
                            in localized environment (fix for "fr" Solaris 8
                            and 9)   
                 Bugtraq:   #4719203
                 Changed:   all binaries


JG-2002-07-29-0: Enhancem.  Complete implementation and use of boolean and 
                            object CULL data types.
                            Added module tests for CULL list functionality
                            and CULL packing.
                 Issue:     #324
                 Cleanup:   Removed unused function lSortLlist2.
                 Bugfix:    Fixed Bug in lDumpElem.
                            Fixed memory access bug.

CR-2002-07-31-0  Bugfix:    addend missing #ifdef __SGE_NO_USERMAPPING__ 
                            lines to preserve sge_options[] array
