@@ -1,3 +1,8 @@
+SD-2002-08-14-0  Enhancem.  Updated Kerberos integration to handle cross-domain
+                            authentication correctly when storing the forwarded
+                            credentials in the credentials cache.
+                 Changed:   put_cred
+
 JG-2002-08-08-0  Enhancem.  Added RFE document for a mirroring module based
                             on the event client interface.
 
